added forms to the original recipe box!(html pages,form classes,views,endpoints)

--- a/recipebox/templates/index.html
+++ b/recipebox/templates/index.html
@@ -5,4 +5,12 @@
 <a href="recipe/{{recipe.id}}">{{recipe.title}}</a> | by: <a href="author/{{recipe.author.id}}">{{recipe.author}}</a>
 </li>
 {%endfor%}
+    <p>
+    <a href="addrecipe/">
+        Add Recipe
+    </a>
+    |
+    <a href="addauthor/">
+        Add Author
+    </a>
 </ul>
