--- a/recipebox/templates/recipe.html
+++ b/recipebox/templates/recipe.html
@@ -1,7 +1,18 @@
 <h1>{{data.title}}</h1>
 <ul>
+{% if request.user == recipe.author.user or request.user.is_superuser %}
+<p>
+  <a href="/editrecipe/{{recipe.id}}/">Edit Recipe</a>
+</p>
+{% endif %}
     <h3>
         Author: <a href="/author/{{data.author.id}}">{{data.author}}</a>
+{% if request.user.is_authenticated %}
+
+<a href='/favorite/{{data.recipe.id}}'>Favorite</a>
+        {%else%}
+<a href='/unfavorite/{{data.recipe.id}}'>Unfavorite</a>
+{% endif %}
     </h3>
     Recipe description:
     <ul>
